<resources>
    <string name="app_name">Òle Hyvä</string>
    <string name="selected_category_value">%1$s</string>
    <string name="suggestion_image_description">Suggestion Image</string>
    <string name="recipe_hyperlink">Show recipe</string>
    <string name="recipe_name_value">%1$s</string>
    <string name="cooking_time_minutes">Cooking time (minutes)</string>
    <string name="ingredients">Ingredients</string>
    <string name="fav_recipe_name">fav_recipe_name</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_to_remove">Confirm to remove?</string>
    <string name="favorites">Favorites</string>
    <string name="actions_button">actions_button</string>
    <string name="recipe_image" />
    <string name="cart_activity_header">Shopping list</string>
    <string name="main_activity_favorites">Favorites</string>
    <string name="main_activity_settings">Settings</string>
    <string name="main_activity_shopping_list">Shopping List</string>

    <string name="activity_suggestions_title">%1$s</string>
    <string name="suggestions_activity_image">Suggestion image</string>
    <string name="suggestions_activity_reroll">Reroll</string>

    <string name="suggestion_card_image_description">Suggestion Image</string>

    <string name="recipe_activity_title">%1$s</string>
    <string name="recipe_activity_image_description">Recipe image</string>
    <string name="recipe_activity_add_to_cart">Add to Cart</string>
    <string name="recipe_activity_add_to_favorites">Add To Favorites</string>
    <string name="recipe_activity_remove_from_favorites">Remove From Favorites</string>

    <string name="filters_activity_title">Filters</string>

    <string name="filters_activity_meal_type">Meal type</string>
    <string name="filters_activity_dish_type">Dish type</string>
    <string name="filters_activity_excluded">Excluded ingredients:</string>
    <string name="filters_activity_edit_text_hint">Add ingredient…</string>

    <string name="diet_filters_title">Diet</string>
    <string name="diet_filters_balanced">Balanced</string>
    <string name="diet_filters_high_fiber">High fiber</string>
    <string name="diet_filters_high_protein">High protein</string>
    <string name="diet_filters_low_carb">Low carb</string>
    <string name="diet_filters_low_fat">Low fat</string>
    <string name="diet_filters_low_sodium">Low sodium</string>

    <string name="health_filters_title">Health</string>
    <string name="health_filters_alcohol_free">Alcohol free</string>
    <string name="health_filters_dairy_free">Dairy free</string>
    <string name="health_filters_egg_free">Egg free</string>
    <string name="health_filters_fish_free">Fish free</string>
    <string name="health_filters_fodmap_free">Fodmap free</string>
    <string name="health_filters_gluten_free">Gluten free</string>
    <string name="health_filters_immuno_supportive">Immuno supportive</string>
    <string name="health_filters_keto_friendly">Keto friendly</string>
    <string name="health_filters_kidney_friendly">Kidney friendly</string>
    <string name="health_filters_low_fat_abs">Low fat abs</string>
    <string name="health_filters_low_potassium">Low potassium</string>
    <string name="health_filters_low_sugar">Low sugar</string>
    <string name="health_filters_paleo">Paleo</string>
    <string name="health_filters_peanut_free">Peanut free</string>
    <string name="health_filters_pescatarian">Pescatarian</string>
    <string name="health_filters_pork_free">Pork free</string>
    <string name="health_filters_red_meat_free">Red meat free</string>
    <string name="health_filters_soy_free">Soy free</string>
    <string name="health_filters_vegan">Vegan</string>
    <string name="health_filters_vegetarian">Vegetarian</string>
    <string name="health_filters_wheat_free">Wheat free</string>

    <string name="meal_type_filters_title">Meal type</string>
    <string name="meal_type_filters_breakfast">Breakfast</string>
    <string name="meal_type_filters_dinner">Dinner</string>
    <string name="meal_type_filters_lunch">Lunch</string>
    <string name="meal_type_filters_snack">Snack</string>
    <string name="meal_type_filters_teatime">Teatime</string>

    <string name="dish_type_filters_title">Dish type</string>
    <string name="dish_type_filters_biscuits_and_cookies">Biscuits and cookies</string>
    <string name="dish_type_filters_bread">Bread</string>
    <string name="dish_type_filters_cereals">Cereals</string>
    <string name="dish_type_filters_condiments_and_sauces">Condiments and sauces</string>
    <string name="dish_type_filters_desserts">Desserts</string>
    <string name="dish_type_filters_drinks">Drinks</string>
    <string name="dish_type_filters_main_course">Main course</string>
    <string name="dish_type_filters_pancake">Pancake</string>
    <string name="dish_type_filters_preps">Preps</string>
    <string name="dish_type_filters_preserve">Preserve</string>
    <string name="dish_type_filters_salad">Salad</string>
    <string name="dish_type_filters_sandwiches">Sandwiches</string>
    <string name="dish_type_filters_side_dish">Side dish</string>
    <string name="dish_type_filters_soup">Soup</string>
    <string name="dish_type_filters_starter">Starter</string>
    <string name="dish_type_filters_sweets">Sweets</string>
    <string name="category">Category</string>
    <string name="category_grid_layout_image">categoryImage</string>
    <string name="shopping_items_list_image">Shopping list item image</string>

</resources>