<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/meal_type_collapse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:onClick="showContents" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/meal_type_filters_title"
            android:textColor="#FFFF"
            android:textSize="20sp"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <ImageView
            android:id="@+id/meal_type_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_arrow_drop_up_24" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFF"/>

    <LinearLayout
        android:id="@+id/meal_type_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:visibility="visible" >

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/meal_type_breakfast_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:onClick="handleToggle"
            android:text="@string/meal_type_filters_breakfast" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/meal_type_dinner_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:onClick="handleToggle"
            android:text="@string/meal_type_filters_dinner" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/meal_type_lunch_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:onClick="handleToggle"
            android:text="@string/meal_type_filters_lunch" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/meal_type_snack_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:onClick="handleToggle"
            android:text="@string/meal_type_filters_snack" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/meal_type_teatime_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:onClick="handleToggle"
            android:text="@string/meal_type_filters_teatime" />

    </LinearLayout>
</LinearLayout>
